--- a/app/cv.html
+++ b/app/cv.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Philipp Jauss, CV, Lebenslauf">
     <meta name="author" content="Philipp Jauss">
     <title>Philipp Jauss CV</title>
-    <link rel="stylesheet" href="css/site.css?v=2.1">
+    <link rel="stylesheet" href="/css/site.css?v=2.1">
     <!-- <script>
         WebFontConfig = {
             google: {
@@ -48,7 +48,7 @@
 
                     <input type="checkbox" id="menuToggle" />
                     <label class="menuName menuName--left" for="menuToggle">
-                        <a class="menuNameLink" href="./index.html">Philipp Jauss</a>
+                        <a class="menuNameLink" href="/index.html">Philipp Jauss</a>
 
                         <div class="menuIcon">
                             <div class="menuIconLine topLine"></div>
@@ -61,16 +61,16 @@
                     <div class="menuEntries menuEntries--left">
                         <ul id="mainMenu">
                             <li>
-                                <a class="mainMenuLink" href="./index.html">Home</a>
+                                <a class="mainMenuLink" href="/index.html">Home</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink" href="./uebermich.html">Ich</a>
+                                <a class="mainMenuLink" href="/uebermich.html">Ich</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink active" href="./cv.html">CV</a>
+                                <a class="mainMenuLink active" href="/cv.html">CV</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink" href="./kontakt.html">Kontakt</a>
+                                <a class="mainMenuLink" href="/kontakt.html">Kontakt</a>
                             </li>
                         </ul>
                     </div>
@@ -101,7 +101,7 @@
                     <p>2015 - heute</p>
                 </div>
                 <div class="contentBodyCell">
-                    <p>Developer (fullstack), siroop.ch</p>
+                    <p>Developer (Full Stack), siroop.ch</p>
                 </div>
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin">
                     <p>2011</p>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin"></div>
                 <div class="contentBodyCell">
-                    <p>Für mich ist es wichtig, Lösungen zu entwickeln, an denen der Benutzer Freude hat, Teil eines grossen
+                    <p>"Full Stack at heart, with a passion for Frontend". Damit dürfte schon das wichtigste gesagt sein. Für mich ist es wichtig, Lösungen zu entwickeln, an denen der Benutzer Freude hat und ausserdem Teil eines grossen
                         ganzen zu sein. Dabei behalte ich stehts den Fokus auf das Wesentliche und denke in Lösungen und
                         nicht in Problemen. Teamwork ist mir dabei besonders wichtig, weil man Erfahrungen austauschen und
                         sich gegenseitig unterstützen kann.
@@ -129,7 +129,7 @@
                     <p>11.2015 - heute</p>
                 </div>
                 <div class="contentBodyCell">
-                    <p class="jobNameAndEmployer">Developer (fullstack), siroop.ch, Zürich</p>
+                    <p class="jobNameAndEmployer">Developer (Full Stack), siroop.ch, Zürich</p>
                     <ul>
                         <li>Agile und Scrum basierte Front- und Backendentwicklung in einer Microservice - Architektur orientierten
                             (RESTbasiert) Umgebung mit tools wie git, node, npm, gulp, docker, webpack
@@ -209,7 +209,7 @@
                     <p>05.1998 - 03.2001</p>
                 </div>
                 <div class="contentBodyCell">
-                    <p class="jobNameAndEmployer">Applikationsentwickler, Credit Suisse Privat Banking, Zürich</p>
+                    <p class="jobNameAndEmployer">Applikationsentwickler, Credit-Suisse Privat Banking, Zürich</p>
                     <ul>
                         <li>Applikationsentwicklung im Classic-Umfeld des Wertschriftenliefergeschäftes (PL/I, IMS, DB2, MQ-Series)
                         </li>
@@ -280,7 +280,7 @@
                 </div>
                 <div class="contentBodyCell">
                     <p class="jobNameAndEmployer">Umschulung PL1</p>
-                    <p>Umschulung zum PL1 Hostsoftwareentwickler bei der Credit Suisse Private Banking</p>
+                    <p>Umschulung zum PL1 Hostsoftwareentwickler bei der Credit-Suisse Private Banking</p>
 
                 </div>
 
@@ -373,7 +373,7 @@
                 </div>
 
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin">
-                    <a href="http://www.philippjauss.gate107.com/cv.pdf">
+                    <a href="/cv.pdf?v=2.0.1">
                         <img class="snlogo" src="img/PDF-Icon.png" alt="Link zum CV als PDF">
                     </a>
                 </div>
