--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Philipp Jauss, Homepage">
     <meta name="author" content="Philipp Jauss">
     <title>Philipp Jauss Home</title>
-    <link rel="stylesheet" href="css/site.css?v=2.1" />
+    <link rel="stylesheet" href="/css/site.css?v=2.1" />
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 
                     <input type="checkbox" id="menuToggle" />
                     <label class="menuName menuName--left" for="menuToggle">
-                        <a class="menuNameLink" href="./index.html">Philipp Jauss</a>
+                        <a class="menuNameLink" href="/index.html">Philipp Jauss</a>
 
                         <div class="menuIcon">
                             <div class="menuIconLine topLine"></div>
@@ -35,16 +35,16 @@
                     <div class="menuEntries menuEntries--left">
                         <ul id="mainMenu">
                             <li>
-                                <a class="mainMenuLink active" href="./index.html">Home</a>
+                                <a class="mainMenuLink active" href="/index.html">Home</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink" href="./uebermich.html">Ich</a>
+                                <a class="mainMenuLink" href="/uebermich.html">Ich</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink" href="./cv.html">CV</a>
+                                <a class="mainMenuLink" href="/cv.html">CV</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink" href="./kontakt.html">Kontakt</a>
+                                <a class="mainMenuLink" href="/kontakt.html">Kontakt</a>
                             </li>
                         </ul>
                     </div>
@@ -55,19 +55,19 @@
 
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin contentBodyCell--keep-column-layout">
                     <div>
-                        <img id="hpimg1" src="img/HP_4052.jpg" />
+                        <img id="hpimg1" src="/img/HP_4052.jpg" />
                     </div>
                     <div>
-                        <img id="hpimg2" src="img/HP_4198.jpg" />
+                        <img id="hpimg2" src="/img/HP_4198.jpg" />
                     </div>
                     <div>
-                        <img id="hpimg3" src="img/HP_4096.jpg" />
+                        <img id="hpimg3" src="/img/HP_4096.jpg" />
                     </div>
                     <div>
-                        <img id="hpimg4" src="img/HP_4251.jpg" />
+                        <img id="hpimg4" src="/img/HP_4251.jpg" />
                     </div>
                     <div>
-                        <img id="hpimg5" src="img/HP_4239.jpg" />
+                        <img id="hpimg5" src="/img/HP_4239.jpg" />
                     </div>
                 </div>
                 <div class="contentBodyCell contentBodyCell--keep-column-layout">
