--- a/app/kontakt.html
+++ b/app/kontakt.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Philipp Jauss, email, google plus, twitter, webseite">
     <meta name="author" content="Philipp Jauss">
     <title>Philipp Jauss Kontakt</title>
-    <link rel="stylesheet" href="css/site.css?v=2.1" />
+    <link rel="stylesheet" href="/css/site.css?v=2.1" />
     <!-- Google Analytics -->
     <script>
         window.ga = window.ga || function () {
@@ -34,7 +34,7 @@
 
                     <input type="checkbox" id="menuToggle" />
                     <label class="menuName menuName--left" for="menuToggle">
-                        <a class="menuNameLink" href="./index.html">Philipp Jauss</a>
+                        <a class="menuNameLink" href="/index.html">Philipp Jauss</a>
 
                         <div class="menuIcon">
                             <div class="menuIconLine topLine"></div>
@@ -47,16 +47,16 @@
                     <div class="menuEntries menuEntries--left">
                         <ul id="mainMenu">
                             <li>
-                                <a class="mainMenuLink" href="./index.html">Home</a>
+                                <a class="mainMenuLink" href="/index.html">Home</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink" href="./uebermich.html">Ich</a>
+                                <a class="mainMenuLink" href="/uebermich.html">Ich</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink" href="./cv.html">CV</a>
+                                <a class="mainMenuLink" href="/cv.html">CV</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink active" href="./kontakt.html">Kontakt</a>
+                                <a class="mainMenuLink active" href="/kontakt.html">Kontakt</a>
                             </li>
                         </ul>
                     </div>
@@ -66,7 +66,7 @@
             <div class="contentCell">
 
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin contentBodyCell--keep-column-layout">
-                    <img class="image image--rotate-right" src="img/4239.png" alt="Bild von Philipp Jauss">
+                    <img class="image image--rotate-right" src="/img/4239.png" alt="Bild von Philipp Jauss">
                 </div>
                 <div class="contentBodyCell contentBodyCell--keep-column-layout">
                     <h1>Kontakt</h1>
@@ -90,13 +90,13 @@
                     </a>
                     <br>
                     <a href="https://plus.google.com/+PhilippJauss" target="_blank">
-                        <img class="snlogo" src="img/Red-signin-Small-base-44dp.png" alt="google plus logo">
+                        <img class="snlogo" src="/img/Red-signin-Small-base-44dp.png" alt="google plus logo">
                     </a>
                     <a href="https://www.twitter.com/pjauss" target="_blank">
-                        <img class="snlogo" src="img/twitter-bird-white-on-blue.png" alt="twitter logo">
+                        <img class="snlogo" src="/img/twitter-bird-white-on-blue.png" alt="twitter logo">
                     </a>
                     <a href="http://www.cyberdines.ch" target="_blank">
-                        <img class="snlogo" src="img/cyberdinessymbol.png" alt="www.cyberdines.ch">
+                        <img class="snlogo" src="/img/cyberdinessymbol.png" alt="www.cyberdines.ch">
                     </a>
                     <br>
                     <br>
