--- a/app/uebermich.html
+++ b/app/uebermich.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Philipp Jauss, about, über mich">
     <meta name="author" content="Philipp Jauss">
     <title>Philipp Jauss Über mich</title>
-    <link rel="stylesheet" href="css/site.css?v=2.1" />
+    <link rel="stylesheet" href="/css/site.css?v=2.1" />
     <!-- Google Analytics -->
     <script>
         window.ga = window.ga || function () {
@@ -34,7 +34,7 @@
 
                     <input type="checkbox" id="menuToggle" />
                     <label class="menuName menuName--left" for="menuToggle">
-                        <a class="menuNameLink" href="./index.html">Philipp Jauss</a>
+                        <a class="menuNameLink" href="/index.html">Philipp Jauss</a>
 
                         <div class="menuIcon">
                             <div class="menuIconLine topLine"></div>
@@ -47,16 +47,16 @@
                     <div class="menuEntries menuEntries--left">
                         <ul id="mainMenu">
                             <li>
-                                <a class="mainMenuLink" href="./index.html">Home</a>
+                                <a class="mainMenuLink" href="/index.html">Home</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink active" href="./uebermich.html">Ich</a>
+                                <a class="mainMenuLink active" href="/uebermich.html">Ich</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink" href="./cv.html">CV</a>
+                                <a class="mainMenuLink" href="/cv.html">CV</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink" href="./kontakt.html">Kontakt</a>
+                                <a class="mainMenuLink" href="/kontakt.html">Kontakt</a>
                             </li>
                         </ul>
                     </div>
@@ -66,11 +66,11 @@
             <div class="contentCell">
 
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin contentBodyCell--keep-column-layout">
-                    <img class="image image--rotate-right" src="img/4052.png" alt="Bild von Philipp Jauss">
+                    <img class="image image--rotate-right" src="/img/4052.png" alt="Bild von Philipp Jauss">
                 </div>
                 <div class="contentBodyCell contentBodyCell--keep-column-layout">
                     <h1>Über mich</h1>
-                   
+
                 </div>
 
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin"></div>
@@ -79,18 +79,24 @@
                 </div>
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin"></div>
                 <div class="contentBodyCell">
-                        <p>
-                                Leidenschaft für perfekten Code ist nicht das Einzige was mich antreibt. Da ist natürlich noch mehr, wie die Faszination
-                                für Technologie im Allgemeinen, die heute gängigen Gadgets wie Smartphones, Tablets, Social Networks
-                                oder kurzum: „the internet of things“. Ich wüsste am liebsten über alles Bescheid, und zwar in jedem
-                                der damit verbundenen Bereiche.
-                            </p>
-                            <p>
-                                Egal ob es darum geht zu wissen, wie genau ein Webserver aufgesetzt wird, wie ein CMS funktioniert, oder was es bedeutet
-                                eine Android-App zu bauen. Es ist diese (schon fast furchtbare) Neugier, die mich Antreibt, um immer
-                                mehr besser über die Dinge in diesem Bereich bescheid zu wissen. Die Möglichkeiten die sich durch
-                                die Verbindung all dieser Technologie ergeben sind einfach endlos.
-                            </p>
+                    <p>
+                        Leidenschaft für perfekten Code ist nicht das Einzige was mich antreibt. Da ist natürlich noch mehr. Besonders der Frontendbereich
+                        hat es mir angetan, und der damit verbundenen Möglichkeiten die sich in den letzten Jahren entwickelt
+                        haben. "The web as THE platform" wiederspiegelt das für mich ganz deutlich. Denn wir bewegen uns
+                        immer mehr online und entsprechend wollen wir Informationen schnell und visuell beeindruckend finden
+                        bzw. davon begeistert werden. Begeisterung für Technologie im Allgemeinen, die heute gängigen Gadgets
+                        wie Smartphones, Tablets, Social Networks, den zukünftig vernetzten Kühlschrank oder kurzum: „the
+                        internet of things“. Ich wüsste am liebsten über alles Bescheid, und zwar in jedem der damit verbundenen
+                        Bereiche.
+                    </p>
+                    <p>
+                        Egal ob es darum geht zu wissen, wie genau ein Webserver aufgesetzt wird, wie ein CMS funktioniert, oder eines der vielen
+                        Frontendframeworks wie React, Angular oder Vue auszuprobieren und dazu gleich die Backendservices
+                        mit Node zu bauen oder eine Seite bis zum ersten Roundtripp zu optimieren. Es ist diese (schon fast
+                        furchtbare) Neugier, die mich Antreibt, um immer mehr und besser über die Dinge in diesem Bereich
+                        bescheid zu wissen. Die Möglichkeiten die sich durch die Verbindung all dieser Technologie ergeben
+                        sind einfach endlos.
+                    </p>
                 </div>
 
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin"></div>
