Update cv and contact

--- a/app/kontakt.html
+++ b/app/kontakt.html
@@ -90,13 +90,16 @@
                     </a>
                     <br>
                     <a href="https://plus.google.com/+PhilippJauss" target="_blank">
-                        <img class="snlogo" src="/img/Red-signin-Small-base-44dp.png" alt="google plus logo">
+                        <img class="snlogo" src="/img/Red-signin-Small-base-44dp.png" title="google plus Profil" alt="google plus logo">
                     </a>
                     <a href="https://www.twitter.com/pjauss" target="_blank">
-                        <img class="snlogo" src="/img/twitter-bird-white-on-blue.png" alt="twitter logo">
+                        <img class="snlogo" src="/img/twitter-bird-white-on-blue.png" title="twitter Profil"  alt="twitter logo">
                     </a>
                     <a href="http://www.cyberdines.ch" target="_blank">
-                        <img class="snlogo" src="/img/cyberdinessymbol.png" alt="www.cyberdines.ch">
+                        <img class="snlogo" src="/img/cyberdinessymbol.png" title="cyberdines website" alt="www.cyberdines.ch">
+                    </a>
+                    <a href="https://www.linkedin.com/in/philippjauss/" target="_blank">
+                        <img class="snlogo" src="/img/linkedin.png" title="Linkedin Profil" alt="linkedin logo">
                     </a>
                     <br>
                     <br>
