Fix missing tracking code on index

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,18 @@
     <meta name="author" content="Philipp Jauss">
     <title>Philipp Jauss Home</title>
     <link inline rel="stylesheet" href="/css/site.css?v=2.1" />
+    <!-- Google Analytics -->
+    <script>
+        window.ga = window.ga || function () {
+            (ga.q = ga.q || []).push(arguments)
+        };
+        ga.l = +new Date;
+        ga('create', 'UA-13077377-4', 'gate107.com');
+        ga('send', 'pageview');
+
+    </script>
+    <script async src="https://www.google-analytics.com/analytics.js"></script>
+    <!-- End Google Analytics -->
 </head>
 
 <body>
