Add webp as image source

--- a/src/cv.html
+++ b/src/cv.html
@@ -80,7 +80,11 @@
             <div class="contentCell">
 
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin contentBodyCell--keep-column-layout">
-                    <img class="image image--rotate-right" src="img/4221.png" alt="Bild von Philipp Jauss">
+                    <picture>
+                        <source srcset="/img/4221.webp" type="image/webp">
+                        <source srcset="/img/4221.png" type="image/png">
+                        <img class="image image--rotate-right" src="/img/4221.png" alt="Bild von Philipp Jauss">
+                    </picture>
                 </div>
                 <div class="contentBodyCell contentBodyCell--keep-column-layout">
                     <h1>CV</h1>
@@ -115,10 +119,11 @@
                 </div>
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin"></div>
                 <div class="contentBodyCell">
-                    <p>"Full Stack at heart, with a passion for Frontend". Damit dürfte schon das wichtigste gesagt sein. Für mich ist es wichtig, Lösungen zu entwickeln, an denen der Benutzer Freude hat und ausserdem Teil eines grossen
-                        ganzen zu sein. Dabei behalte ich stehts den Fokus auf das Wesentliche und denke in Lösungen und
-                        nicht in Problemen. Teamwork ist mir dabei besonders wichtig, weil man Erfahrungen austauschen und
-                        sich gegenseitig unterstützen kann.
+                    <p>"Full Stack at heart, with a passion for Frontend". Damit dürfte schon das wichtigste gesagt sein. Für
+                        mich ist es wichtig, Lösungen zu entwickeln, an denen der Benutzer Freude hat und ausserdem Teil
+                        eines grossen ganzen zu sein. Dabei behalte ich stehts den Fokus auf das Wesentliche und denke in
+                        Lösungen und nicht in Problemen. Teamwork ist mir dabei besonders wichtig, weil man Erfahrungen austauschen
+                        und sich gegenseitig unterstützen kann.
                     </p>
                 </div>
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin"></div>
@@ -374,7 +379,11 @@
 
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin">
                     <a href="/cv.pdf?v=2.0.2">
-                        <img class="snlogo" src="img/PDF-Icon.png" alt="Link zum CV als PDF">
+                        <picture>
+                                <source srcset="img/PDF-Icon.webp" type="image/webp">
+                                <source srcset="img/PDF-Icon.png" type="image/png">
+                                <img src="img/PDF-Icon.png" alt="Link zum CV als PDF">
+                            </picture>
                     </a>
                 </div>
                 <div class="contentBodyCell">
