--- a/src/index.html
+++ b/src/index.html
@@ -67,19 +67,39 @@
 
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin contentBodyCell--keep-column-layout">
                     <div>
-                        <img id="hpimg1" src="/img/HP_4052.jpg" />
+                        <picture>
+                            <source srcset="/img/HP_4052.webp" type="image/webp">
+                            <source srcset="/img/HP_4052.jpg" type="image/png">
+                            <img id="hpimg1" src="/img/HP_4052.jpg" alt="Bild von Philipp Jauss">
+                        </picture>
                     </div>
                     <div>
-                        <img id="hpimg2" src="/img/HP_4198.jpg" />
+                        <picture>
+                            <source srcset="/img/HP_4198.webp" type="image/webp">
+                            <source srcset="/img/HP_4198.jpg" type="image/png">
+                            <img id="hpimg2" src="/img/HP_4198.jpg" alt="Bild von Philipp Jauss">
+                        </picture>
                     </div>
                     <div>
-                        <img id="hpimg3" src="/img/HP_4096.jpg" />
+                        <picture>
+                            <source srcset="/img/HP_4096.webp" type="image/webp">
+                            <source srcset="/img/HP_4096.jpg" type="image/png">
+                            <img id="hpimg3" src="/img/HP_4096.jpg" alt="Bild von Philipp Jauss">
+                        </picture>
                     </div>
                     <div>
-                        <img id="hpimg4" src="/img/HP_4251.jpg" />
+                        <picture>
+                            <source srcset="/img/HP_4251.webp" type="image/webp">
+                            <source srcset="/img/HP_4251.jpg" type="image/png">
+                            <img id="hpimg4" src="/img/HP_4251.jpg" alt="Bild von Philipp Jauss">
+                        </picture>
                     </div>
                     <div>
-                        <img id="hpimg5" src="/img/HP_4239.jpg" />
+                        <picture>
+                            <source srcset="/img/HP_4239.webp" type="image/webp">
+                            <source srcset="/img/HP_4239.jpg" type="image/png">
+                            <img id="hpimg5" src="/img/HP_4239.jpg" alt="Bild von Philipp Jauss">
+                        </picture>
                     </div>
                 </div>
                 <div class="contentBodyCell contentBodyCell--keep-column-layout">
