--- a/src/uebermich.html
+++ b/src/uebermich.html
@@ -66,7 +66,12 @@
             <div class="contentCell">
 
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin contentBodyCell--keep-column-layout">
-                    <img class="image image--rotate-right" src="/img/4052.png" alt="Bild von Philipp Jauss">
+                    <picture>
+                        <source srcset="/img/4052.webp" type="image/webp">
+                        <source srcset="/img/4052.png" type="image/png">
+                        <img class="image image--rotate-right" src="/img/4052.png" alt="Bild von Philipp Jauss">
+                    </picture>
+
                 </div>
                 <div class="contentBodyCell contentBodyCell--keep-column-layout">
                     <h1>Über mich</h1>
