--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -66,12 +66,16 @@
             <div class="contentCell">
 
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin contentBodyCell--keep-column-layout">
-                    <img class="image image--rotate-right" src="/img/4239.png" alt="Bild von Philipp Jauss">
+                    <picture>
+                        <source srcset="/img/4239.webp" type="image/webp">
+                        <source srcset="/img/4239.png" type="image/png">
+                        <img class="image image--rotate-right" src="/img/4239.png" alt="Bild von Philipp Jauss">
+                    </picture>
                 </div>
                 <div class="contentBodyCell contentBodyCell--keep-column-layout">
                     <h1>Kontakt</h1>
                 </div>
-                
+
                 <div class="contentBodyCell contentBodyCell--add-mobile-top-margin"></div>
                 <div class="contentBodyCell">
                     <h2>Klassisch oder via social network.</h2>
@@ -90,16 +94,33 @@
                     </a>
                     <br>
                     <a href="https://plus.google.com/+PhilippJauss" target="_blank">
-                        <img class="snlogo" src="/img/Red-signin-Small-base-44dp.png" title="google plus Profil" alt="google plus logo">
+                        <picture>
+                            <source srcset="/img/Red-signin-Small-base-44dp.webp" type="image/webp">
+                            <source srcset="/img/Red-signin-Small-base-44dp.png" type="image/png">
+                            <img src="/img/Red-signin-Small-base-44dp.png" title="google plus Profil" alt="google plus logo">
+                        </picture>
                     </a>
                     <a href="https://www.twitter.com/pjauss" target="_blank">
-                        <img class="snlogo" src="/img/twitter-bird-white-on-blue.png" title="twitter Profil"  alt="twitter logo">
+                        <picture>
+                            <source srcset="/img/twitter-bird-white-on-blue.webp" type="image/webp">
+                            <source srcset="/img/twitter-bird-white-on-blue.png" type="image/png">
+                            <img src="/img/twitter-bird-white-on-blue.png" title="twitter Profil" alt="twitter logo">
+                        </picture>
                     </a>
                     <a href="http://www.cyberdines.ch" target="_blank">
-                        <img class="snlogo" src="/img/cyberdinessymbol.png" title="cyberdines website" alt="www.cyberdines.ch">
+                        <picture>
+                            <source srcset="/img/cyberdinessymbol.webp" type="image/webp">
+                            <source srcset="/img/cyberdinessymbol.png" type="image/png">
+                            <img src="/img/cyberdinessymbol.png" title="cyberdines website" alt="www.cyberdines.ch">
+                        </picture>
                     </a>
                     <a href="https://www.linkedin.com/in/philippjauss/" target="_blank">
-                        <img class="snlogo" src="/img/linkedin.png" title="Linkedin Profil" alt="linkedin logo">
+                        <picture>
+                            <source srcset="/img/linkedin.webp" type="image/webp">
+                            <source srcset="/img/linkedin.png" type="image/png">
+                            <img src="/img/linkedin.png" title="Linkedin Profil" alt="linkedin logo">
+                        </picture>
+
                     </a>
                     <br>
                     <br>
