--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -34,7 +34,7 @@
 
                     <input type="checkbox" id="menuToggle" />
                     <label class="menuName menuName--left" for="menuToggle">
-                        <a class="menuNameLink" href="/index.html">Philipp Jauss</a>
+                        <a class="menuNameLink" href="/">Philipp Jauss</a>
 
                         <div class="menuIcon">
                             <div class="menuIconLine topLine"></div>
@@ -47,16 +47,16 @@
                     <div class="menuEntries menuEntries--left">
                         <ul id="mainMenu">
                             <li>
-                                <a class="mainMenuLink" href="/index.html">Home</a>
+                                <a class="mainMenuLink" href="/">Home</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink" href="/uebermich.html">Ich</a>
+                                <a class="mainMenuLink" href="/uebermich">Ich</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink" href="/cv.html">CV</a>
+                                <a class="mainMenuLink" href="/cv">CV</a>
                             </li>
                             <li>
-                                <a class="mainMenuLink active" href="/kontakt.html">Kontakt</a>
+                                <a class="mainMenuLink active" href="/kontakt">Kontakt</a>
                             </li>
                         </ul>
                     </div>
