--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
     <meta name="keywords" content="Philipp Jauss, Homepage">
     <meta name="author" content="Philipp Jauss">
     <title>Philipp Jauss Home</title>
-    <link inline rel="stylesheet" href="/css/site.css?v=2.1" />
+    <link inline rel="stylesheet" href="/css/site.css" />
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#0046a0"/>
     <!-- Google Analytics -->
     <script>
         window.ga = window.ga || function () {
@@ -115,6 +117,14 @@
         </div>
 
     </div>
+    <script>
+        // Check that service workers are registered     
+        if ('serviceWorker' in navigator) {
+          window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/sw.js');
+          });
+        }
+        </script>
 </body>
 
 </html>
