--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -9,7 +9,9 @@
     <meta name="keywords" content="Philipp Jauss, email, google plus, twitter, webseite">
     <meta name="author" content="Philipp Jauss">
     <title>Philipp Jauss Kontakt</title>
-    <link inline rel="stylesheet" href="/css/site.css?v=2.1" />
+    <link inline rel="stylesheet" href="/css/site.css" />
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#0046a0"/>
     <!-- Google Analytics -->
     <script>
         window.ga = window.ga || function () {
@@ -93,28 +95,28 @@
                         <p>philipp@jauss.name</p>
                     </a>
                     <br>
-                    <a href="https://plus.google.com/+PhilippJauss" target="_blank">
+                    <a href="https://plus.google.com/+PhilippJauss" target="_blank" rel="noopener">
                         <picture>
                             <source srcset="/img/Red-signin-Small-base-44dp.webp" type="image/webp">
                             <source srcset="/img/Red-signin-Small-base-44dp.png" type="image/png">
                             <img src="/img/Red-signin-Small-base-44dp.png" title="google plus Profil" alt="google plus logo">
                         </picture>
                     </a>
-                    <a href="https://www.twitter.com/pjauss" target="_blank">
+                    <a href="https://www.twitter.com/pjauss" target="_blank" rel="noopener">
                         <picture>
                             <source srcset="/img/twitter-bird-white-on-blue.webp" type="image/webp">
                             <source srcset="/img/twitter-bird-white-on-blue.png" type="image/png">
                             <img src="/img/twitter-bird-white-on-blue.png" title="twitter Profil" alt="twitter logo">
                         </picture>
                     </a>
-                    <a href="http://www.cyberdines.ch" target="_blank">
+                    <a href="http://www.cyberdines.ch" target="_blank" rel="noopener">
                         <picture>
                             <source srcset="/img/cyberdinessymbol.webp" type="image/webp">
                             <source srcset="/img/cyberdinessymbol.png" type="image/png">
                             <img src="/img/cyberdinessymbol.png" title="cyberdines website" alt="www.cyberdines.ch">
                         </picture>
                     </a>
-                    <a href="https://www.linkedin.com/in/philippjauss/" target="_blank">
+                    <a href="https://www.linkedin.com/in/philippjauss/" target="_blank" rel="noopener">
                         <picture>
                             <source srcset="/img/linkedin.webp" type="image/webp">
                             <source srcset="/img/linkedin.png" type="image/png">
@@ -131,6 +133,14 @@
         </div>
 
     </div>
+    <script>
+        // Check that service workers are registered     
+        if ('serviceWorker' in navigator) {
+          window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/sw.js');
+          });
+        }
+        </script>
 </body>
 
 </html>
